--- a/src/ImageSharp.Textures/ImageSharp.Textures.csproj
+++ b/src/ImageSharp.Textures/ImageSharp.Textures.csproj
@@ -22,7 +22,7 @@
     </When>
     <Otherwise>
       <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;netstandard2.1;netstandard2.0;netstandard1.3;net472</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
       </PropertyGroup>
     </Otherwise>
   </Choose>
@@ -32,7 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.2" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.0.0-alpha.0.161" />
 
     <!--TODO: Upgrade version in ImageSharp-->
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="5.0.0" />
